# CSB-2023-Project-1

./: .gitignore  README.md  blog.db  init_db.py  pyproject.toml  tasks.py
src/: app.py
src/templates/: create_post.html  edit_post.html  index.html  login.html  register.html
