[tool.poetry]
name = "vulnerable-blog"
version = "0.1.0"
description = ""
authors = ["Matias Tolppanen <matias.tolppanen@outlook.com>"]
readme = "README.md"
packages = [{include = "vulnerable_blog", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
